# OpenWeather

./: .gitignore  Dockerfile  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt  run.py  tox.ini
deployment/: Dockerfile  deploy.sh  docker-compose.yml
openweather/: __init__.py  __main__.py  main.py  master.py
openweather/agents/: __init__.py  agent_manager.py  analyst_agent.py  base_agent.py  marine_agent.py  orchestrator.py  travel_agent.py  weather_analyst.py
openweather/api/: __init__.py  dependencies.py  main.py
openweather/api/routes/: __init__.py  agent.py  analytics_routes.py  forecast.py  forecast_routes.py  health_routes.py  monitoring_routes.py  weather_routes.py
openweather/cli/: __init__.py  admin.py  forecast_command.py  interactive.py  main.py  utils_cli.py
openweather/core/: __init__.py  config.py  models_shared.py  monitoring.py  utils.py
openweather/data/: __init__.py  cache.py  data_loader.py  data_simulator.py
openweather/drone/: __init__.py  flight_planner.py  mavlink_connector.py  models.py  safety_analyzer.py
openweather/llm/: __init__.py  huggingface_client.py  langchain_utils.py  llm_manager.py  ollama_client.py  ollama_mlx_client.py  openai_client.py  prompt_engineering.py
openweather/models/: __init__.py  mlx_model_runner.py  physics_model_stub.py  weather_predictor.py
openweather/services/: __init__.py  analytics_service.py  forecast_service.py  weather_service.py
openweather/web/: __init__.py  __main__.py  app.py  dashboard.py
openweather/web/static/css/: dashboard.css  style.css
openweather/web/templates/: analysis_result.html  analyze.html  dashboard.html  error.html  forecast.html  index.html  monitoring.html
scripts/: activate.sh  setup.sh
tests/: conftest.py  test_data_simulator.py  test_drone.py  test_forecast_service.py  test_llm.py  test_models.py  test_weather_data.py  test_web.py
tests/integration/: test_integration.py
tests/performance/: test_performance.py
